--- a/index.html
+++ b/index.html
@@ -2,14 +2,39 @@
 <html lang= "en">
 <head>
    <meta charset="UTF-8">
-   <title>Sample Resume</title>
+   <title>Professional Resume</title>
 </head>
 
-<body>
-    <h1>Joshua Conner</h1>
+<body>    
+<style>
+    body {
+      background-color: lightblue;
+    }
+    .center p{
+     text-align:center;
+     vertical-align: middle;
+     justify-content: center;
+     
+    }
+</style>    
+   
+    <style>
+        img {
+            clip-path: ellipse(30% 40%);
+            shape-outside: ellipse(45% 50%);
+            }
+        img {
+            border: 10px black;
+            padding: 15px;
+            border-image: url(Headshot2.jpg) 30 round;
+        }
+
+    </style>
     <img src="./Headshot2.jpg" height="100"/>
-    <h1>Summary</h1>
+    <h3>Joshua Conner</h3>
+    <h2>Professional Summary</h2>
     <normal>Detail-oriented Administrative Specialist skilled in multitasking, problem-solving, and maintaining confidentiality, excelling in fast-paced environments requiring strong organizational abilities.</h3></normal>
+    
     <hr>
     <h2>Education</h2>
         <ul>
