--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <img src="./Headshot2.jpg" height="100"/>
     <h3>Joshua Conner</h3>
     <h2>Professional Summary</h2>
-    <normal>Detail-oriented Administrative Specialist skilled in multitasking, problem-solving, and maintaining confidentiality, excelling in fast-paced environments requiring strong organizational abilities.</h3></normal>
+    <normal>Proven track record of a detail-oriented Administrative Specialist that is skilled in SQL, Data Analytics. Seeking new roles with job titles of in Human Resource, HRIS, Business Analyst, Product Analyst and Data Analyst. At my core I am a solution base problem-solving and fact finder. I also bring to your company demonstrated strong communication and an ability to excel in fast-paced environments requiring strong organizational abilities.</h3></normal>
     
     <hr>
     <h2>Education</h2>
