--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
     <img src="./Headshot2.jpg" height="100"/>
     <h3>Joshua Conner</h3>
     <h2>Professional Summary</h2>
-    <normal>Proven track record of a detail-oriented Administrative Specialist that is skilled in SQL, Data Analytics. Seeking new roles with job titles of in Human Resource, HRIS, Business Analyst, Product Analyst and Data Analyst. At my core I am a solution base problem-solving and fact finder. I also bring to your company demonstrated strong communication and an ability to excel in fast-paced environments requiring strong organizational abilities.</h3></normal>
-    
-    <hr>
+    <normal>As a Human Resources Onboarding Specialist, I am driven by the impact a well-structured onboarding program has on employee engagement, retention, and overall organizational success. My expertise lies in developing and implementing effective onboarding strategies, fostering positive first impressions, and ensuring new team members have the resources and support they need to thrive.
+
     <h2>Education</h2>
         <ul>
             <normal><li>Bachelor of Business Administration - Belmont University (Class of 2019)</normal>
@@ -43,6 +42,11 @@
     <hr>
     <h2>Work Experience</h2> 
         <ul>
+        <h3>Human Resources, Onboarding Specialist, HCA</h3>
+            <h><normal>April 2025 - Current</h></p>
+            <ul><h><li>Troubleshoot questions from field HR Representatives and partnering HROC Service Groups regarding Onboarding, Background Checks, Adjudications, Pre-Adverse Processing, Rescinded Offers, Start Date Changes, Candidate Confirmations and Candidate Retriggers.        </li></h></ul>
+            <ul><h><li>Provide immediate, timely, efficient support to HROC Management, Talent Acquisition COE, HRIS, HR Business Partners, Hiring Managers, Employee Relations COE, Precheck and other HROC Service Groups.</li></h></ul> 
+            <ul><h><li>Support enterprise-wide candidate confirmations by reviewing job description requirements and background checks to facilitate confirmation and determine hire action type with appropriate reason code.</li></h></ul>     
         <h3>Human Resources, HRIS, FedEX Supply Chain (Contractor) </h3>
             <h><normal>October 2024 - February 2025</h></p>
             <ul><h><li>Track changes and Update employee changes in ADP Workforce.</li></h></ul>
