--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         img {
             border: 10px black;
             padding: 15px;
-            border-image: url(Headshot2.jpg) 30 round;
+            border-image: url(headshot1.jpeg) 30 round;
         }
 
     </style>
-    <img src="./Headshot2.jpg" height="100"/>
+    <img src="./headshot1.jpeg" height="100"/>
     <h3>Joshua Conner</h3>
     <h2>Professional Summary</h2>
-    <normal>As a Human Resources Onboarding Specialist, I am driven by the impact a well-structured onboarding program has on employee engagement, retention, and overall organizational success. My expertise lies in developing and implementing effective onboarding strategies, fostering positive first impressions, and ensuring new team members have the resources and support they need to thrive.
+    <normal>As part of HCA Healthcare’s HR Service Center, I specialize in onboarding administration for one of the nation’s leading healthcare providers. I support candidates, employees, managers, and HR teams by facilitating a smooth and compliant onboarding process from background checks to start date coordination.
 
     <h2>Education</h2>
         <ul>
@@ -44,9 +44,13 @@
         <ul>
         <h3>Human Resources, Onboarding Specialist, HCA</h3>
             <h><normal>April 2025 - Current</h></p>
-            <ul><h><li>Troubleshoot questions from field HR Representatives and partnering HROC Service Groups regarding Onboarding, Background Checks, Adjudications, Pre-Adverse Processing, Rescinded Offers, Start Date Changes, Candidate Confirmations and Candidate Retriggers.        </li></h></ul>
-            <ul><h><li>Provide immediate, timely, efficient support to HROC Management, Talent Acquisition COE, HRIS, HR Business Partners, Hiring Managers, Employee Relations COE, Precheck and other HROC Service Groups.</li></h></ul> 
-            <ul><h><li>Support enterprise-wide candidate confirmations by reviewing job description requirements and background checks to facilitate confirmation and determine hire action type with appropriate reason code.</li></h></ul>     
+            <ul><h><li>Process background results, adjudications, and pre-adverse notices</li></h></ul>
+            <ul><h><li>Confirm candidate eligibility and initiate onboarding re-triggers</li></h></ul> 
+            <ul><h><li>Update start dates and manage rescinded offers</li></h></ul>
+            <ul><h><li>Serve as liaison between HCA and vendors (e.g., PreCheck, License Manager Pro)</li></h></ul> 
+            <ul><h><li>Collaborate with Talent Acquisition, HRIS, HRBPs, and Employee Relations</li></h></ul>
+            <ul><h><li>Maintain high service levels and data accuracy using systems such as Taleo, Lawson, Atlas, and Kronos</li></h></ul> 
+            <ul><h><li>Accept incoming phone calls from candidates and HR associates to deliver high level of customer service by providing solutions to questions regarding applicants status updates.</li></h></ul>  
         <h3>Human Resources, HRIS, FedEX Supply Chain (Contractor) </h3>
             <h><normal>October 2024 - February 2025</h></p>
             <ul><h><li>Track changes and Update employee changes in ADP Workforce.</li></h></ul>
@@ -56,16 +60,6 @@
                 tickets. </li></h></ul>
             <ul><h><li>Excellent organizational, communication and analytical skills for
                 cross-departmental collaboration.</li></h></ul>  
-                
-        <h3>Human Resources, HR Coordinator, Goldfish Swim School </h3>
-            <h><normal>May 2023 - November 2023</h></p>
-            <ul><h><li>Facilitated the onboarding/ offboarding employee process including limiting and uploading training
-                materials, granting software access, and managing all aspects of
-                google workspace.</li></h></ul>
-            <ul><h><li>Provided support for franchisee inquiries related to essential Goldfish
-                Swim School programs and services, including overseeing operational
-                software such as Asana, iClassPro, Salesforce, Wave/Goldfish Online,
-                and all Google Workspace functionalities. </li></h></ul>
         <h3>Operations, Last Mile Support, Amazon, INC </h3>
             <h><normal>December 2021- February 2023</h></p>
             <ul><h><li>Resolved DSP issues related to their scorecards, including Investigated Driver Associates regarding safety, customer feedback,
